Added HIP flows required for Discovery and User-initiated linking.
