# src/main/java/com/nha/abdm/wrapper/hip/hrp/link/userInitiated/requests/OnConfirmPatient.java
@@ -1,7 +1,7 @@
 /* (C) 2024 */
 package com.nha.abdm.wrapper.hip.hrp.link.userInitiated.requests;
 
-import com.nha.abdm.wrapper.hip.hrp.common.requests.CareContextRequest;
+import com.nha.abdm.wrapper.common.models.CareContext;
 import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -16,5 +16,5 @@ public class OnConfirmPatient {
 
   private String referenceNumber;
   private String display;
-  private List<CareContextRequest> careContexts;
+  private List<CareContext> careContexts;
 }
